# bd_app

./: .editorconfig  .gitignore  .jshintrc  .pre-commit-config.yaml  LICENSE  Makefile  README.md  captain-definition  docs.yml  local.yml  manage.py  merge_local_dotenvs_in_dotenv.py  package-lock.json  package.json  production.yml  pyproject.toml  tailwind.config.js
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
building_dialouge_webapp/: conftest.py  setup.py
building_dialouge_webapp/data/costs/: costs_renovation.csv  costs_technologies.csv
building_dialouge_webapp/heat/: admin.py  apps.py  config.yaml  extraction.py  flows.py  forms.py  hooks.py  models.py  navigation.py  settings.py  tables.py  urls.py  views.py
building_dialouge_webapp/templates/: base.html  base_flow.html  base_footer_button.html  base_view.html  docs.html
building_dialouge_webapp/users/: adapters.py  apps.py  middleware.py  models.py  views.py
config/: celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.md  index.rst  make.bat  usage.md  users.rst  wissenswertes.md  wissenswertes.rst
docs/pycharm/: configuration.rst
requirements/: base.in  base.txt  local.in  local.txt  production.in  production.txt
scripts/: django_oemof_call.py  django_oemof_standalone.py  minute_into_hour_series.py  test_django_oemof.py  timeseries_into_model.py
tests/: test_costs.py  test_merge_production_dotenvs_in_dotenv.py  test_simulation.py
tests/test_data/: datapackage.json
(+138 files in other folders)
